--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vitejs/plugin-legacy": "^6.0.2",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
+    "leaflet-routing-machine": "^3.2.12",
     "pinia": "^3.0.1",
     "sass": "^1.86.0",
     "vite-plugin-pwa": "^0.21.2",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
+    "@types/leaflet-routing-machine": "^3.2.8",
     "@types/node": "^22.13.11",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-prettier": "^10.2.0",
